fixed fixed formatting

--- a/screens.kv
+++ b/screens.kv
@@ -13,6 +13,8 @@
 	user_name: _user_name
 	zipcode: _zip_code
 	city_state_label: _city_state_label
+	password: _password
+	repeat_password: _repeat_password
 
 	BoxLayout:
 		orientation: "vertical"
@@ -27,7 +29,7 @@
 			text: "settings screen"
             valign: 'middle'
 			size_hint_y: None
-			height: 45
+			height: 20
 
 		#GridLayout of all the user input lines for the settings
 		GridLayout:
@@ -45,6 +47,22 @@
 				size: (100, 30)
 			TextInput:
 				id: _zip_code
+			Label:
+				text: "password:"
+				size_hint: (None, None)
+				size: (100, 30)
+			TextInput:
+				multiline: False
+				password: True
+				id: _password
+			Label:
+				text: "repeat password:"
+				size_hint: (None, None)
+				size: (120, 30)
+			TextInput:
+				multiline: False
+				password: True
+				id: _repeat_password
 			
 				
 
@@ -59,69 +77,35 @@
 <HomeMountainScreen>:
 	name: "HomeMountain"
 
+	BoxLayout:
+		orientation: "vertical"
+		canvas.before:
+			Color:
+				rgba: 1, 1, 1, .5
+			Rectangle:
+				pos: self.pos
+				size: self.size
+		
+		Label:
+			text: "Home Mountains Screen"
+            valign: 'middle'
+			size_hint_y: None
+			height: 45
+
 <MountainFinderScreen>:
     name: "MountainFinder"
 
-
-
-<LoginPopup>:
-	title: 'Log In' 
-	size_hint: None, None
-	size: 400, 400
-	auto_dismiss: False
 	BoxLayout:
 		orientation: "vertical"
-		GridLayout:
-			rows: 2
-			size_hint: 1, None
-			height: 60
-		
-			Label:
-				text: "username"
-			TextInput:
-				multiline: False
-			Label:
-				text: "password"
-			TextInput:
-				multiline: False
-				password: True
-				
-		Label:
-		BoxLayout:
-			orientation: "horizontal"
-			Button:
-				text: "Log In"
-				on_release: root.dismiss()
-			Button:
-				text: "Guest"
-				on_release: root.dismiss()
-			Button:
-				text: "Sign up"
-				on_release: root.openSignupPopup()
-
-<SignupPopup>:
-	title: 'Sign Up' 
-	size_hint: None, None
-	size: 400, 400
-	auto_dismiss: False
-	
-	GridLayout:
-		cols: 2
+		canvas.before:
+			Color:
+				rgba: 1, 1, 1, .5
+			Rectangle:
+				pos: self.pos
+				size: self.size
 		
 		Label:
-			text: "username"
-		TextInput:
-			multiline: False
-		Label:
-			text: "password"
-		TextInput:
-			multiline: False
-			password: True
-		Label:
-			text: "repeat password"
-		TextInput:
-			multiline: False
-			password: True
-		Button:
-			text: "confirm"
-			on_release: root.dismiss()	
+			text: "Home Mountains Screen"
+            valign: 'middle'
+			size_hint_y: None
+			height: 45
