--- a/screens.kv
+++ b/screens.kv
@@ -109,3 +109,11 @@
             valign: 'middle'
 			size_hint_y: None
 			height: 45
+
+		RecycleView:
+            data:[{'text': str(x),'size_hint':(1,None)} for x in root.getItems()]
+            viewclass: 'Button'
+            RecycleBoxLayout:
+                size_hint: (1,None)
+                height: self.minimum_height
+                orientation: 'vertical'
