--- a/screens.kv
+++ b/screens.kv
@@ -2,19 +2,16 @@
 
 #The list of all screens that are contained within the menu manager. every feature that needs a screen should be here
 <MenuManager>:
+	SettingsScreen:
 	HomeMountainScreen:
-    SettingsScreen:
     MountainFinderScreen:
 
 <SettingsScreen>:
 	name: "Settings"
 
 	#attributes for the python file
-	user_name: _user_name
 	zipcode: _zip_code
 	city_state_label: _city_state_label
-	password: _password
-	repeat_password: _repeat_password
 
 	BoxLayout:
 		orientation: "vertical"
@@ -26,7 +23,7 @@
 				size: self.size
 
 		Label:
-			text: "settings screen"
+			text: "Settings Screen"
             valign: 'middle'
 			size_hint_y: None
 			height: 20
@@ -36,35 +33,12 @@
 			cols: 2
 			spacing: 10
 			Label:
-				text: "Username:"
-				size_hint: (None, None)
-				size: (100, 30)
-			TextInput:
-				id: _user_name
-			Label:
 				text: "Zip Code:"
 				size_hint: (None, None)
-				size: (100, 30)
+				size_hint: (.2, None)
 			TextInput:
 				id: _zip_code
-			Label:
-				text: "password:"
-				size_hint: (None, None)
-				size: (100, 30)
-			TextInput:
-				multiline: False
-				password: True
-				id: _password
-			Label:
-				text: "repeat password:"
-				size_hint: (None, None)
-				size: (120, 30)
-			TextInput:
-				multiline: False
-				password: True
-				id: _repeat_password
-			
-				
+				multiline: False			
 
 		Label:
 			id: _city_state_label
